failed to fix skills alignment problem

--- a/core/public/styles/sass/profile.sass
+++ b/core/public/styles/sass/profile.sass
@@ -96,8 +96,9 @@
     bottom: 4px
 
 .skillsWrapper
-    display: inline-block 
-    text-align: center
+    align-self: center
+    display: flex
+    
    
     
 .profileSkill
